--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "devDependencies": {
-    "http-server": "^0.9.0"
+  "dependencies": {
+    "http-server": "^0.12.1"
   }
 }
